@@ -5,7 +5,6 @@ import com.flightapp.dto.InventoryRequest;
 import com.flightapp.dto.SearchRequest;
 import com.flightapp.model.Booking;
 import com.flightapp.model.Flight;
-import com.flightapp.model.PassengerInfo;
 import com.flightapp.model.enums.*;
 import com.flightapp.service.BookingService;
 import com.flightapp.service.FlightService;
@@ -17,8 +16,6 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-
-import org.springframework.http.MediaType;
 import org.springframework.test.web.reactive.server.WebTestClient;
 
 import reactor.core.publisher.Flux;
@@ -27,13 +24,13 @@ import reactor.core.publisher.Mono;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.List;
+import java.util.Collections;
 
 @WebFluxTest(controllers = FlightController.class)
-public class FlightControllerTest {
+class FlightControllerTest {
 
     @Autowired
-    private WebTestClient webTestClient;
+    private WebTestClient webClient;
 
     @MockBean
     private FlightService flightService;
@@ -45,58 +42,58 @@ public class FlightControllerTest {
     private Booking booking;
 
     @BeforeEach
-    void init() {
+    void setup() {
+
         flight = Flight.builder()
                 .id("F1")
                 .airlineName(AirlineName.INDIGO)
                 .fromPlace(PlaceName.HYDERABAD)
                 .toPlace(PlaceName.DELHI)
                 .departureDate(LocalDate.now())
-                .departureTime(LocalTime.now())
-                .oneWayPrice(BigDecimal.valueOf(2000))
+                .departureTime(LocalTime.NOON)
+                .oneWayPrice(BigDecimal.valueOf(5000))
                 .totalSeats(100)
-                .bookedSeats(10)
+                .bookedSeats(0)
                 .build();
 
         booking = Booking.builder()
                 .id("B1")
-                .pnr("PNR-12345678")
+                .pnr("PNR1234")
                 .flightId("F1")
                 .airlineName("INDIGO")
                 .fromPlace("HYDERABAD")
                 .toPlace("DELHI")
-                .email("sravya@gmail.com")
+                .journeyDate(LocalDate.now())
                 .tripType(TripType.ONE_WAY)
+                .name("Sravya")
+                .email("test@example.com")
                 .numberOfSeats(1)
-                .passengers(List.of(new PassengerInfo("Sravya", "F", 21)))
+                .totalPrice(BigDecimal.valueOf(5000))
                 .mealType(MealType.VEG)
-                .seatNumbers(List.of("1A"))
+                .passengers(Collections.emptyList())
+                .seatNumbers(Collections.emptyList())
                 .status(BookingStatus.CONFIRMED)
                 .build();
     }
 
     @Test
     void testAddInventory() {
-        InventoryRequest request = new InventoryRequest();
-        request.setAirlineName(AirlineName.INDIGO);
-        request.setFromPlace(PlaceName.HYDERABAD);
-        request.setToPlace(PlaceName.DELHI);
-        request.setDepartureDate(LocalDate.now());
-        request.setDepartureTime(LocalTime.now());
-        request.setTotalSeats(100);
-        request.setOneWayPrice(BigDecimal.valueOf(2000));
+        InventoryRequest req = new InventoryRequest();
+        req.setAirlineName(AirlineName.INDIGO);
+        req.setFromPlace(PlaceName.HYDERABAD);
+        req.setToPlace(PlaceName.DELHI);
+        req.setDepartureDate(LocalDate.now());
+        req.setDepartureTime(LocalTime.NOON);
+        req.setTotalSeats(50);
+        req.setOneWayPrice(BigDecimal.valueOf(5000));
 
-        Mockito.when(flightService.addInventory(Mockito.any()))
-                .thenReturn(Mono.just(flight));
+        Mockito.when(flightService.addInventory(Mockito.any())).thenReturn(Mono.just(flight));
 
-        webTestClient.post()
+        webClient.post()
                 .uri("/api/v1.0/flight/airline/inventory")
-                .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(request)
+                .bodyValue(req)
                 .exchange()
-                .expectStatus().isCreated()
-                .expectBody(String.class)
-                .isEqualTo("F1");
+                .expectStatus().isCreated();
     }
 
     @Test
@@ -106,75 +103,25 @@ public class FlightControllerTest {
         request.setToPlace(PlaceName.DELHI);
         request.setJourneyDate(LocalDate.now());
 
-        Mockito.when(flightService.searchFlights(Mockito.any()))
-                .thenReturn(Flux.just(flight));
+        Mockito.when(flightService.searchFlights(Mockito.any())).thenReturn(Flux.just(flight));
 
-        webTestClient.post()
+        webClient.post()
                 .uri("/api/v1.0/flight/search")
-                .contentType(MediaType.APPLICATION_JSON)
                 .bodyValue(request)
                 .exchange()
                 .expectStatus().isOk()
-                .expectBodyList(Flight.class)
-                .hasSize(1);
-    }
-
-    @Test
-    void testBookTicket() {
-        BookingRequest request = new BookingRequest();
-        request.setName("Sravya");
-        request.setEmail("sravya@gmail.com");
-        request.setNumberOfSeats(1);
-        request.setPassengers(List.of(new PassengerInfo("A", "F", 21)));
-        request.setMealType(MealType.VEG);
-        request.setSeatNumbers(List.of("1A"));
-        request.setTripType(TripType.ONE_WAY);
-
-        Mockito.when(bookingService.bookTicket(Mockito.eq("F1"), Mockito.any()))
-                .thenReturn(Mono.just(booking));
-
-        webTestClient.post()
-                .uri("/api/v1.0/flight/booking/F1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(request)
-                .exchange()
-                .expectStatus().isCreated()
-                .expectBody(Booking.class);
+                .expectBodyList(Flight.class);
     }
 
     @Test
     void testGetTicket() {
-        Mockito.when(bookingService.getTicketByPnr("PNR-12345678"))
+        Mockito.when(bookingService.getTicketByPnr("PNR1234"))
                 .thenReturn(Mono.just(booking));
 
-        webTestClient.get()
-                .uri("/api/v1.0/flight/ticket/PNR-12345678")
+        webClient.get()
+                .uri("/api/v1.0/flight/ticket/PNR1234")
                 .exchange()
                 .expectStatus().isOk()
                 .expectBody(Booking.class);
-    }
-
-    @Test
-    void testBookingHistory() {
-        Mockito.when(bookingService.getBookingHistory("sravya@gmail.com"))
-                .thenReturn(Flux.just(booking));
-
-        webTestClient.get()
-                .uri("/api/v1.0/flight/booking/history/sravya@gmail.com")
-                .exchange()
-                .expectStatus().isOk()
-                .expectBodyList(Booking.class)
-                .hasSize(1);
-    }
-
-    @Test
-    void testCancelTicket() {
-        Mockito.when(bookingService.cancelTicket("PNR-12345678"))
-                .thenReturn(Mono.empty());
-
-        webTestClient.delete()
-                .uri("/api/v1.0/flight/booking/cancel/PNR-12345678")
-                .exchange()
-                .expectStatus().isNoContent();
     }
 }
